Made a simple todo app using DOM

--- a/0-1/frontEnd/DOM/Interest Calculator/client/index.html
+++ b/0-1/frontEnd/DOM/Interest Calculator/client/index.html
@@ -6,7 +6,7 @@
     <title>Simple Interest Calculator</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Interest Calculator</h1>
     <form id="form">
       <h3>Initial investment</h3>
       <input type="text" name="p" />
