Removed unnecessary things from js code

--- a/0-1/frontEnd/DOM/TodoApp/index.html
+++ b/0-1/frontEnd/DOM/TodoApp/index.html
@@ -22,7 +22,6 @@
       <h2>Your todos</h2>
     </div>
     <script type="text/javascript">
-      let allTodos = [];
       let form = document.getElementById("form");
       form.addEventListener("submit", async (e) => {
         e.preventDefault();
@@ -37,13 +36,24 @@
           let newDiv = document.createElement("div");
           newDiv.style.margin = "5px 0px 5px 0px";
           let titleHead = document.createElement("h4");
-          titleHead.style.margin = "5px";
+          let descHead = document.createElement("span");
+          titleHead.style.margin = "0px";
+          let doneButton = document.createElement("button");
+          doneButton.innerHTML = "Mark as done";
+          doneButton.addEventListener("click", () => {
+            doneButton.innerHTML = "Done";
+          });
+          doneButton.style.width = "10rem";
           newDiv.appendChild(titleHead);
+          newDiv.appendChild(descHead);
+          newDiv.appendChild(doneButton);
+          newDiv.style.display = "flex";
+          newDiv.style.flexDirection = "column";
+
           document.getElementById("showtodo").appendChild(newDiv);
-          document.getElementById;
           allTodos.forEach((todo) => {
-            titleHead.appendChild(document.createTextNode(todo.title));
-            newDiv.appendChild(document.createTextNode(todo.desc));
+            titleHead.innerHTML = todo.title;
+            descHead.innerHTML = todo.desc;
           });
         } else {
           alert("Please mind your inputs");
